# Task-for-educational-practice

./: CMakeLists.txt  main.cpp
internal/Generators/BetaGenerator/: BetaGenerator.cpp  BetaGenerator.h
internal/Generators/Generator/: Generator.cpp  Generator.h
internal/Graph/: Graph.cpp  Graph.h
internal/GraphAnalyzer/: GraphAnalyzer.cpp  GraphAnalyzer.h
internal/GraphProcessor/: GraphProcessor.cpp  GraphProcessor.h
internal/Stats/AlgoResult/: AlgoResult.h
internal/Stats/AlgoResult/Task1/: AlgFromTask1Res.h  Task1.h
internal/Stats/AlgoResult/Task2/: AlgFromTask2Res.h  Task2.h
internal/Stats/AlgoResult/Task3/: AlgFromTask3Res.h  Task3.h
internal/Stats/AlgoResult/Task4/: AlgFromTask4Res.h  Task4.h
internal/Stats/GraphStats/: GraphStats.h
internal/Stats/SelectionOfGraphsStats/: SelectionOfGraphsStats.h
